# opengl-viewer

./: .gitignore  CMakeLists.txt  README.md  build-release.sh  build.sh  check-linux-deps.sh  cleanbuild.sh  source.fs
include/: Scene.hpp  Util.h  VAOContainer.h
shaders/: fragment.glsl  source.fs  source.vs  vertex.glsl
src/: Util.cpp  VAOContainer.cpp  main.cpp
